--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "dependencies": {
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.8"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
